--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-apollo-hooks": "^0.5.0",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "react-select": "^3.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
