--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "graphql": "^14.4.2",
     "graphql-tag": "^2.10.1",
     "react": "^16.8.6",
+    "react-alert": "^5.5.0",
+    "react-alert-template-basic": "^1.0.0",
     "react-apollo": "^2.5.8",
     "react-apollo-hooks": "^0.5.0",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
-    "react-select": "^3.0.4"
+    "react-select": "^3.0.4",
+    "recharts": "^1.7.1"
   },
   "scripts": {
     "start": "react-scripts start",
